# TexasHoldEmV4

./: .gitignore  CMakeLists.txt  README.md  build-client.sh  build-server.sh  conanfile.txt  run-client.sh  run-envoy.sh  run-server.sh
client/: build.sh  client.js  package-lock.json  package.json
client/protoc/: texas_holdem_grpc_pb.js  texas_holdem_pb.js
proto/: texas_holdem.proto
protobuff/: texas_holdem.proto
scripts/: build-client.sh  build-run-server.sh  build-server.sh  run-server.sh
server/: CMakeLists.txt  main.cpp
server/include/: GameController.h  State.h  StateManager.h
server/include/Entities/: Action.h  Board.h  Card.h  Deck.h  HandInfo.h  Player.h  PossibleAction.h  Pot.h
server/include/Entities/Actions/: AllInBetAction.h  AllInCallAction.h  AllInRaiseAction.h  BetAction.h  CallAction.h  CheckAction.h  FoldAction.h  NoneAction.h  PostBigAction.h  PostSmallAction.h  RaiseAction.h
server/include/Entities/PossibleActions/: PossibleAllInBet.h  PossibleAllInCall.h  PossibleAllInRaise.h  PossibleBet.h  PossibleCall.h  PossibleCheck.h  PossibleFold.h  PossibleRaise.h
server/include/GameState/: State.h
server/include/Services/: ActionManager.h  DealerManager.h  EventManager.h  HandRankManager.h  IOManager.h  PlayerManager.h  PositionManager.h  PotManager.h  RPCValidator.h  RankHandManager.h  RequestManager.h
server/include/Shared/: Enums.h  GameData.h  Types.h
server/include/States/: BettingStreet.h  GameSetup.h  State.h  StateManager.h  Winner.h
server/include/Utils/: ActionUtil.h  BitwiseUtil.h  CardUtil.h  GameUtil.h  HandRankUtil.h  IOUtil.h  PlayerUtil.h  PositionUtil.h  PotUtil.h  PrintUtil.h  TestUtil.h
server/include/gRPC/: ProtoUtil.h  pokerServiceImpl.h
server/src/: GameController.cpp
server/src/Entities/: Board.cpp  Card.cpp  Deck.cpp  Player.cpp
server/src/GameState/: AnnounceWinner.cpp  GameSetup.cpp  RoundEnd.cpp  RoundSetup.cpp  Showdown.cpp  StreetEnd.cpp  StreetInProgress.cpp  StreetSetup.cpp
server/src/Services/: ActionManager.cpp  DealerManager.cpp  EventManager.cpp  HandRankManager.cpp  IOManager.cpp  PlayerManager.cpp  PositionManager.cpp  PotManager.cpp  RPCValidator.cpp  RequestManager.cpp
server/src/Shared/: GameData.cpp
server/src/States/: AnnounceWinner.cpp  BettingStreet.cpp  GameSetup.cpp  RoundEnd.cpp  RoundSetup.cpp  Showdown.cpp  StateManager.cpp  StreetEnd.cpp  StreetInProgress.cpp  StreetSetup.cpp  Winner.cpp
server/src/Utils/: ActionUtil.cpp  BitwiseUtil.cpp  CardUtil.cpp  GameUtil..cpp  HandRankUtil.cpp  IOUtil.cpp  PlayerUtil.cpp  PositionUtil.cpp  PotUtil.cpp  PrintUtil.cpp  TestUtil.cpp
server/src/gRPC/: ProtoUtil.cpp  pokerServiceImpl.cpp
server/test/Services/: ActionTest.cpp  DealerTest.cpp  HandRankTest.cpp  IOTest.cpp  PlayerTest.cpp  PositionTest.cpp  PotManagerTest.cpp
src/proto-gen/: texas_holdem.grpc.pb.cc
web-client/: app.js  command.txt  envoy.yaml  index.html  index.js  package-lock.json  package.json  test.js  webpack.config.js
web-client/src/: GameContext.js  GameReducer.js  GameStreamListener.js  HomePageUI.css  PokerUI.css  app.js  enum.js  index.js  rootReducer.js  store.js
web-client/src/api/: grpc.js
web-client/src/components/: BoardComponent.js  CardComponent.js  GamePage.js  GamePageComponent.js  HomePage.js  LeaveGameComponent.js  ManualResetGameComponent.js  PlayerComponent.js  PotComponent.js  TableComponent.js  gamePage.js  gameStateDisplay.js  joinGameComponent.js  leaveGameComponent.js  playerActionComponent.js  subscribeComponent.js
web-client/src/components/poker-table/: Board.jsx  Card.jsx  LastAction.jsx  Players.jsx  PokerTable.jsx  Pot.jsx  Pots.jsx  RecentBet.jsx  Seat.jsx
web-client/src/constants/: enum.js
web-client/src/deprecated/: PlayerComponent.js  TableComponent.js
web-client/src/deprecated/reducers/: BoardReducer.js  HoleCardsReducer.js  PlayerActionReducer.js  PlayerToActReducer.js  PlayersReducer.js  PotsReducer.js  RootReducer.js  ShowdownReducer.js  StreetReducer.js  WinnerReducer.js
web-client/src/events/: gameEvents.js
web-client/src/grpc/: gameEvents.js  streamingCalls.js  unaryCalls.js
web-client/src/hooks/: UseRedirectUser.js  useJoinGame.js
web-client/src/pages/: GamePage.js  HomePage.js
web-client/src/reducers/: boardReducer.js  holeCardsReducer.js  playerActionReducer.js  playerToActReducer.js  playersReducer.js  potsReducer.js  showdownReducer.js  streetReducer.js  winnerReducer.js
web-client/src/utils/: CardHelpers.js  Coordinates.js  localStorage.js
